--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,8 @@
+
 *{
   padding: 0%;
   margin: 0%;
+  box-sizing: border-box;
 }
 
 body {
@@ -9,15 +11,40 @@ body {
   justify-content: center;
   min-width: 320px;
   min-height: 100vh;
+  width:auto;
   padding: 0%;
   margin: 0%;
 }
 
-.king{
+.DisplayStage {
+    /* display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); */
+    gap: 20px;
+    margin: 20px;
+  }
+  
+  .previewPage{
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(176px,1fr));
+  }
+  
+  .Display {
+	position: relative;
+	display: flex;
+	flex-direction: column;
+	padding: 20px;
+	background-color: #fff;
+	border-radius: 8px;
+	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+	transition: box-shadow 0.3s ease;
+  }
+  
+
+/* .king{
   display: flex;
   justify-content: center;
   align-self: center;
-}
+} */
 
 img{
   width: 120px;
@@ -42,17 +69,30 @@ img{
   gap: 20px;
   margin: 20px;
 }
+.input-box{
+  padding: 5px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size: 16px;
+  width: 40%;
+}
 
 nav{
-  background-color: rgb(21, 22, 53);
-  height: 100px;
+  /* background-color: rgb(161, 106, 238); */
+  /* height: 120px; */
   color: white;
   margin-bottom: 30px;
+  align-items:flex-start;
+  width: 100%;
+}
+.nav-logo{
+  width: 300px;
+  height: 300px;
 }
 
 .backButton{
   width: 50px;
-  height: 25px;
+  height: 30px;
 }
 
 .episodes{
@@ -78,23 +118,6 @@ nav{
   border: none;
 }
 
-.card-container {
-  display: inline-grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  gap: 20px;
-  margin: 20px;
-}
-
-.card {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  padding: 20px;
-  background-color: #fff;
-  border-radius: 8px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  transition: box-shadow 0.3s ease;
-}
 h1, h3, h4, h5, h6, p {
   margin: 0;
 }
@@ -380,7 +403,7 @@ input:focus {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 50vh;
+  height: 30vh;
   background-color: #f8f8f8;
 }
 
@@ -397,10 +420,10 @@ input:focus {
 }
 
 .show-info img {
-  width: 300px;
-  height: 300px;
+  width: 200px;
+  height: 200px;
   border-radius: 50%;
   margin: 20px;
   box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
 }  
-/* styles.css (or any other CSS file you are using) */
+
