--- a/src/index.css
+++ b/src/index.css
@@ -22,13 +22,13 @@ body {
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); */
     gap: 20px;
     margin: 20px;
-    background: #141414
+    background-color: #141414;
   }
   
   .previewPage{
     display: grid;
     grid-template-columns: repeat(auto-fit,minmax(176px,1fr));
-    background: #141414
+    background-color: #141414;
   }
   
   .Display {
@@ -53,7 +53,8 @@ img{
   display: flex;
   flex-direction: column;
   padding: 20px;
-  background-color: #fff;
+  color: white;
+  background-color: #141414;
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   transition: box-shadow 0.3s ease;
@@ -62,15 +63,16 @@ img{
 .showList{
   display: inline-grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  gap: 20px;
+  gap: 30px;
   margin: 20px;
+  background-color: #141414;
 }
 .input-box{
   padding: 5px;
   border: 1px solid #ccc;
-  border-radius: 4px;
-  font-size: 16px;
-  width: 40%;
+  border-radius: 5%;
+  font-size: 15px;
+  width: 50%;
 }
 
 nav{
@@ -94,7 +96,6 @@ nav{
   height: 190px;
   border: 1px solid black;
   border-radius: 7px;
-  background-color: grey;
   color:white;
   padding: 20px;
   font-size: 10px;
