--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
   padding: 0%;
   margin: 0%;
   box-sizing: border-box;
+
 }
 
 body {
@@ -17,6 +18,7 @@ body {
   background-color: #141414;
 }
 
+
 .DisplayStage {
     /* display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); */
@@ -30,13 +32,18 @@ body {
     grid-template-columns: repeat(auto-fit,minmax(176px,1fr));
     background-color: #141414;
   }
-  
+  select{
+    /* background: #DEEBF8; */
+    color:white;
+  }
+   */
   .Display {
 	position: relative;
 	display: flex;
 	flex-direction: column;
 	padding: 20px;
-	background-color: #fff;
+  background-color: #141414;
+	/* background-color: #fff; */
 	border-radius: 8px;
 	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 	transition: box-shadow 0.3s ease;
@@ -73,6 +80,8 @@ img{
   border-radius: 5%;
   font-size: 15px;
   width: 50%;
+  color: white;
+  background-color: #F5F5F5;
 }
 
 nav{
@@ -104,7 +113,7 @@ nav{
 }
 
 .NoFavouritesText{
-  color: black;
+  color: white;
 }
 
 .sortSection{
@@ -113,11 +122,6 @@ nav{
   background-color: #141414;
 }
 
-.LikeImage{
-  width: 20px;
-  height: 20px;
-  border: none;
-}
 
 h1, h3, h4, h5, h6, p {
   margin: 0;
@@ -156,7 +160,7 @@ nav.dark {
 }
 
 .nav--logo_text {
-  color:black;
+  color:white;
   margin-right: auto;
   font-family: 'Borel', cursive;
   font-size: 35px;
@@ -352,7 +356,8 @@ input:focus {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 30vh;
+  height: 40vh;
+  color: white;
   background-color:#141414 ;
 }
 
@@ -369,9 +374,9 @@ input:focus {
 }
 
 .show-info img {
-  width: 200px;
-  height: 200px;
-  border-radius: 50%;
+  width: 250px;
+  height: 175px;
+  border-radius: 10%;
   margin: 20px;
   box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
 }  
