--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -5,6 +5,7 @@
 	margin: 0;
 	box-sizing: border-box;
 	font-family: "Titillium Web", sans-serif;
+	background-color: #141414;
 }
 
 :root {
@@ -16,11 +17,13 @@
 body {
 	background: #353535;
 	color: #ffffff;
+	
 
 }
 
 header {
 	display: flex;
+	/* position: fixed; */
 	align-items: center;
 	justify-content: space-between;
 	height: 150px;
@@ -39,6 +42,7 @@ nav a {
 }
 nav{
 	width: 100%;
+	
 }
 
 nav a:hover {
@@ -61,6 +65,7 @@ header div,
 nav {
 	display: flex;
 	align-items: center;
+	
 }
 
 @media only screen and (max-width: 1024px) {
@@ -80,7 +85,9 @@ nav {
 		align-items: center;
 		justify-content: center;
 		gap: 1.5rem;
-		background-color: var(--mainColor);
+		/* background-color: var(--mainColor); */
+		background-color: #141414;
+		color: white;
 		transition: 1s;
 		position: absolute;
 		z-index: 1;
